# car_mileage_validation

./: .gitignore  CMakeLists.txt  README.md
Testing/: CarDataSerializableTest.cpp
resources/docs/: Application_Developing_Approach_OOP.txt  File_Structure.txt  MVP.txt  Technical_Design.txt
src/: Car.cpp  CarDataSerializableTest.cpp  UI.cpp  User.cpp  main.cpp
src/include/: Car.h  Serializable.h  UI.h  User.h
